@@ -45,6 +45,7 @@ Version 4.0  [ currently under development ]
     TEST SUITE:
         - Added tests for angle structure enumeration and analysis.
         - Expanded normal surface tests to include trivial triangulations.
+        - Added tests for fundamental group calculation and recognition.
 
 Version 3.97  [ 24 November, 2003 ] - Final prerelease for version 4.0.
     OVERALL:
